// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors reducer should handle ERROR - insert default message if nothing is given 1`] = `"קרתה תקלה, אנא נסו שנית."`;

exports[`errors reducer should handle ERROR 1`] = `"test error"`;

exports[`errors reducer should return the initial state - return dict of empty arrays with the correct keys 1`] = `""`;

exports[`fetch reducer should handle LOAD FETCH SERVICE - return \`Fetch\` object 1`] = `
Fetch {
  "_RESEND": Symbol(RESEND),
  "_definedExceptions": Object {
    "BLACKLISTED_TOKEN": "_handleExpiredToken",
    "EXPIRED_TOKEN": "_handleExpiredToken",
  },
  "_requestsLimit": 2,
  "defaultHeaders": Object {
    "Accept": "application/json",
    "Content-Type": "application/json",
  },
  "sentRequests": 0,
}
`;

exports[`user reducer should handle CHANGE_USER_IMAGE - return user object with \`test2\` image 1`] = `
Object {
  "image": "test2",
}
`;

exports[`user reducer should handle LOGIN - return user object 1`] = `
Object {
  "name": "test",
}
`;

exports[`user reducer should handle LOGOUT - return null 1`] = `null`;
